--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,10 @@
 	path = external/bwapi
 	url = https://github.com/bwapi/bwapi/
 	branch = develop
+[submodule "external/openbw-bwapi"]
+	path = external/openbw-bwapi
+	url = https://github.com/kant2002/bwapi
+	branch = develop-openbw
+[submodule "external/openbw"]
+	path = external/openbw
+	url = https://github.com/OpenBW/openbw
