--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,12 +18,13 @@ install:
 
 before_test:
   - ps: iex ((New-Object Net.WebClient).DownloadString('https://raw.githubusercontent.com/appveyor/secure-file/master/install.ps1'))
-  - ps: Invoke-WebRequest 'https://n00byedge.com/mpqs/BrooDat.mpq.enc' -OutFile 'C:/projects/bwem-community/$env:CONFIGURATION/BrooDat.mpq.enc'
-  - ps: Invoke-WebRequest 'https://n00byedge.com/mpqs/StarDat.mpq.enc' -OutFile 'C:/projects/bwem-community/$env:CONFIGURATION/StarDat.mpq.enc'
-  - ps: Invoke-WebRequest 'https://n00byedge.com/mpqs/patch_rt.mpq.enc' -OutFile 'C:/projects/bwem-community/$env:CONFIGURATION/patch_rt.mpq.enc'
+  - ps: Invoke-WebRequest 'https://n00byedge.com/mpqs/BrooDat.mpq.enc' -OutFile 'C:/projects/bwem-community/BrooDat.mpq.enc'
+  - ps: Invoke-WebRequest 'https://n00byedge.com/mpqs/StarDat.mpq.enc' -OutFile 'C:/projects/bwem-community/StarDat.mpq.enc'
+  - ps: Invoke-WebRequest 'https://n00byedge.com/mpqs/patch_rt.mpq.enc' -OutFile 'C:/projects/bwem-community/patch_rt.mpq.enc'
   - cmd: appveyor-tools\secure-file -decrypt C:/projects/bwem-community/%CONFIGURATION%/BrooDat.mpq.enc -secret %mpq_decryption_key%
   - cmd: appveyor-tools\secure-file -decrypt C:/projects/bwem-community/%CONFIGURATION%/StarDat.mpq.enc -secret %mpq_decryption_key%
   - cmd: appveyor-tools\secure-file -decrypt C:/projects/bwem-community/%CONFIGURATION%/patch_rt.mpq.enc -secret %mpq_decryption_key%
+  - cmd: move *.mpq %CONFIGURATION%/
 
 build:
   project: BWEM.sln
